RolesQuery: allow the contact name to be configured.
By default the contact name is extracted from the document name.
I never use the query anywhere else. But then I ran into a bug with
Unicode. Overriding the name in the content itself served as a nice
temporary workaround.